--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -136,7 +136,7 @@ Dock window (a) of the main GUI (Fig. \ref{fig:gui}) sets up the metric tensor \
 corresponding to the crystal $UB$ matrix using the sample definition.
 A magnified view of this window is provided in Fig. \ref{fig:gui_xtal}. 
 As seen before, the $UB$ matrix transforms the crystal coordinate system into the instrument's 
-laboratory coordinate system.
+laboratory coordinate system \cite{Lumsden2005}.
 The necessary information for the $B$ matrix comprise the axis lengths of the sample lattice's
 unit cell as well as the axis angles for the non-Cartesian crystal coordinate system.
 The $UB$ matrix rotates the crystal coordinate system so that the $x$ and $y$ axes correspond
@@ -174,7 +174,7 @@ Finally, the check boxes named ``scattering senses'' control the sign of the sca
 If the box is checked, a positive angle corresponds to a counterclockwise sense, i.e. corresponding
 to the usual mathematical definition, and alternatively to a clockwise sense when unchecked.
 From the standpoint of the physics to be studied in the sample, these signs have no influence
-in practice. They do, however, strongly affect the resolution of the instrument \cite{Eckold2014}
+in practice. They do, however, strongly affect the resolution of the instrument \cite{Eckold2014} \cite[p. 260]{Shirane2002}
 and have to be considered carefully in the set-up of an experiment.
 \end{minipage}
 
