--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1143,6 +1143,28 @@
 
 @misc
 {
+	wiki_unittest,
+	author = "{Wikipedia contributors}",
+	title = {{Unit testing --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Unit_testing&oldid=1028372048",
+	note = "[Online; accessed 4-October-2021]"
+}
+
+
+@misc
+{
+	wiki_integrationtest,
+	author = "{Wikipedia contributors}",
+	title = {{Integration testing --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Integration_testing&oldid=1041463234",
+	note = "[Online; accessed 4-October-2021]"
+}
+
+
+@misc
+{
 	cppwiki_concepts,
 	author = "{Cppreference.com contributors}",
 	title = {{Constraints and concepts --- C++ reference}},
@@ -1577,7 +1599,7 @@
 {
 	web_NOMAD,
 	title = {{NOMAD Instrument Control System (Software)}},
-	author = {{ILL Instrument Control Group}},
+	author = {{J. Locatelli, Instrument Control Group at the Institut Laue-Langevin}},
 	year = {2021},
 	url = "https://code.ill.fr/instrument-control",
 	OPThowpublished = "\url{https://code.ill.fr/instrument-control}",
@@ -1589,7 +1611,7 @@
 {
 	web_NOMAD3d,
 	title = {{NOMAD 3D (Software)}},
-	author = {{ILL Instrument Control Group}},
+	author = {{Y. Le Goc, Instrument Control Group at the Institut Laue-Langevin}},
 	year = {2021},
 	url = "https://code.ill.fr/instrument-control/protos/nomad-3d",
 	note = "[Online; accessed 25-September-2021]",
