--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -202,6 +202,9 @@ Mathematical details on this and other aspects of \textit{OpenGL} rendering have
 in chapter \ref{ch:gl}.
 The renderer itself can be found in the class \lstinline[language=C++]|PathsRenderer|, located in
 the file \lstinline|./src/gui/PathsRenderer.cpp|.
+It was further developed from a 3-d plotter class which we had previously created
+\cite{Takin2021, PhDWeber, Takin2017, Takin2016}, and is originally based on example source code
+\cite{web_QOpenGLWidgetExampleThreaded} provided with the \textit{Qt} \cite{web_Qt} library.
 
 Internally, several data structures are maintained for the object system. 
 The main hierarchical object system has its root in the \lstinline[language=C++]|InstrumentSpace|
