--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -227,9 +227,9 @@ coordinate axes as special cases \cite[p. 238]{Bronstein2008}:
 
 \subsubsection{Quaternions}
 Quaternions are hyper-complex numbers of the form $w + x \cdot i + y \cdot j + z \cdot k$, possessing one real 
-component, $w$, and three imaginary components, $x$, $y$, and $z$. 
+component, $w$, and three imaginary components, $x$, $y$, and $z$ \cite[pp. 294-295]{Bronstein2008}.
 Usually, quaternions are written as tuples $\left( w,\,x,\,y,\,z \right) = \left( w,\,\underline{v} \right) \in \mathbb{H}$,
-where the three imaginary components are treated as a vector component.
+where the three imaginary components are treated as a vector component \cite[p. 295]{Bronstein2008}.
 Algebraically, quaternions form the division ring $\mathbb{H}$, named after William Rowan Hamilton, which follows from the 
 basic properties of the three imaginary units, $i$, $j$, and $k$ \cite[p. 103]{Kuipers2002}:
 \begin{equation}
@@ -237,7 +237,7 @@ basic properties of the three imaginary units, $i$, $j$, and $k$ \cite[p. 103]{K
 	\label{eq:quat_basic}
 \end{equation}
 A very good in-depth treatise of quaternion algebra and analysis can be found in the book by Kuipers \cite{Kuipers2002},
-which we follow in this section.
+which we follow in this section. Quaternions are furthermore discussed extensively in Ref. \cite[pp. 294-311]{Bronstein2008}.
 Here we only present some important results, please refer to Ref. \cite{Kuipers2002} for the derivations.
 
 \paragraph{Quaternion multiplication}
