--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -30,7 +30,7 @@
 	author = {Kuipers, J. B.},
 	title = {{Quaternions and Rotation Sequences}},
 	year = {2002},
-	publisher = {Princeton University Press},
+	publisher = {Princeton University Press, Princeton, New Jersey, USA and Oxford, UK},
 	isbn = {0-691-10298-8},
 }
 
@@ -41,7 +41,7 @@
 	author = {Graham Sellers and Richard S. Wright, Jr. and Nicholas Haemel},
 	title = {{OpenGL SuperBible: Comprehensive Tutorial and Reference, Sixth Edition}},
 	year = {2014},
-	publisher = {Addison-Wesley},
+	publisher = {Addison-Wesley, Upper Saddle River, New Jersey, USA},
 	isbn = {978-0-321-90294-8},
 }
 
@@ -63,7 +63,7 @@
 	author = {Shirane, G. and Shapiro, S. M. and Tranquada, J. M.},
 	title = {{Neutron Scattering with a Triple-Axis Spectrometer: Basic Techniques}},
 	year = {2002},
-	publisher = {Cambridge University Press},
+	publisher = {Cambridge University Press, Cambridge, UK},
 	isbn = {978-0-521-41126-4},
 }
 
@@ -74,7 +74,7 @@
 	author = {Squires, G. L.},
 	title = {{Introduction to the Theory of Thermal Neutron Scattering}},
 	year = {2012},
-	publisher = {Cambridge University Press},
+	publisher = {Cambridge University Press, Cambridge, UK},
 	isbn = {978-1-107-64406-9},
 }
 
@@ -97,7 +97,7 @@
 	author = {Anthony Williams},
 	title = {{C++ Concurrency in Action -- Practical Multithreading}},
 	year = {2012},
-	publisher = {Manning Publications Co.},
+	publisher = {Manning Publications Co., Shelter Island, NY, USA},
 	isbn = {978-1-933-98877-1},
 	url = {https://www.manning.com/books/c-plus-plus-concurrency-in-action},
 }
@@ -177,33 +177,33 @@
 @book
 {
 	Kernighan2006,
-	title={{The C Programming Language, Second Edition}},
-	author={Kernighan, Brian W and Ritchie, Dennis M},
-	year={1988},
-	publisher={Pearson},
-	isbn={978-0-131-10362-7},
+	title = {{The C Programming Language, Second Edition}},
+	author = {Kernighan, Brian W and Ritchie, Dennis M},
+	year = {1988},
+	publisher = {Pearson},
+	isbn = {978-0-131-10362-7},
 }
 
 
 @book
 {
 	Stroustrup2008,
-	title={{The C++ Programming Language, Fourth Edition}},
-	author={Bjarne Stroustrup},
-	year={2013},
-	publisher={Addision-Wesley Professional},
-	isbn={978-0-321-95832-7},
+	title = {{The C++ Programming Language, Fourth Edition}},
+	author = {Bjarne Stroustrup},
+	year = {2013},
+	publisher = {Addision-Wesley Professional},
+	isbn = {978-0-321-95832-7},
 }
 
 
 @book
 {
 	Stroustrup2018,
-	title={{A Tour of C++, Second Edition}},
-	author={Bjarne Stroustrup},
-	year={2018},
-	publisher={Addision-Wesley Professional},
-	isbn={978-0-134-99783-4},
+	title = {{A Tour of C++, Second Edition}},
+	author = {Bjarne Stroustrup},
+	year = {2018},
+	publisher = {Addision-Wesley Professional},
+	isbn = {978-0-134-99783-4},
 }
 
 
@@ -323,7 +323,7 @@
 	doi = {10.1007/978-3-642-18638-7_6},
 	isbn = {978-3-642-18638-7},
 	OPTurl = {https://graphviz.org/documentation/EGKNW03.pdf},
-	publisher = {Springer-Verlag, Berlin, Heidelberg}
+	publisher = {Springer-Verlag, Berlin, Heidelberg, Germany}
 }
 
 
@@ -339,7 +339,7 @@
 	doi = {10.1007/978-3-540-33259-6_2},
 	PRINTisbn = {978-3-540-33258-9},
 	isbn = {978-3-540-33259-6},
-	publisher = {Springer-Verlag, Berlin, Heidelberg},
+	publisher = {Springer-Verlag, Berlin, Heidelberg, Germany},
 	issn = {1612-3786},
 }
 
@@ -356,7 +356,7 @@
 	doi = {10.1007/978-3-540-33259-6_6},
 	PRINTisbn = {978-3-540-33258-9},
 	isbn = {978-3-540-33259-6},
-	publisher = {Springer-Verlag, Berlin, Heidelberg},
+	publisher = {Springer-Verlag, Berlin, Heidelberg, Germany},
 	issn = {1612-3786},
 }
 
