--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -171,7 +171,7 @@ which corresponds to scattering on the $\left(002\right)$ Bragg reflection of hi
 pyrolithic graphite (HOPG) \cite[p. 250]{Shirane2002}, which is one of the standard crystals used as a
 monochromator or analyser in a TAS instrument.
 Finally, the check boxes named ``scattering senses'' control the sign of the scattering angles.
-If the box is checked, a positive angle corresponds to a counterclockwise sense, i.e. corresponding
+If the box is checked, a positive angle corresponds to a counter-clockwise sense, i.e. corresponding
 to the usual mathematical definition, and alternatively to a clockwise sense when unchecked.
 From the standpoint of the physics to be studied in the sample, these signs have no influence
 in practice. They do, however, strongly affect the resolution of the instrument \cite{Eckold2014} \cite[p. 260]{Shirane2002}
