--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -183,7 +183,10 @@ in Ref. \cite[pp. 55-93]{Shirane2002}.
 		from the monochromator crystal (M), picking out a single wavelength $\lambda_i$ and wavevector $\underline{k}_i$.
 		The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining a wavevector $\underline{k}_f$.
 		The magnitude of $\underline{k}_f$ and thus $\lambda_f$ is determined by Bragg-scattering on the analyser crystal (A).
-		The momentum and energy transfers are given by Eqs. \ref{eq:Q} and \ref{eq:E}, respectively. }
+		The momentum and energy transfers are given by Eqs. \ref{eq:Q} and \ref{eq:E}, respectively.
+		The figure was inspired by Ref. \cite[p. 72, Fig. 3.8]{Shirane2002}, which is a more detailed version of the same figure,
+		and is similar to Ref. \cite[p. 10, Fig. 2.1]{PhDWeber}.
+		}
 	\label{fig:spectroscopy}
 \end{figure}
 
@@ -197,7 +200,9 @@ in Ref. \cite[pp. 55-93]{Shirane2002}.
 		In addition to the theoretical layout shown in Fig. \ref{fig:spectroscopy},
 		an optional beryllium filter removing unwanted high energy neutrons \cite[pp. 78-84]{Shirane2002}
 		is also visible in this picture.
-		This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
+		This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.
+		Similar figures, albeit showing different instruments, have been published in my PhD
+		thesis \cite[pp. 13-14]{PhDWeber}. }
 	\label{fig:thales}
 \end{figure}
 
