--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -581,7 +581,8 @@
 	skxpaper,
 	author = {T. Weber and D. M. Fobes and J. Waizner and P. Steffens and G. S. Tucker and M. B\"ohm and L. Beddrich and C. Franz and H. Gabold and R. Bewley and D. Voneshen and M. Skoulatos and R. Georgii and G. Ehlers and A. Bauer and C. Pfleiderer and P. B\"oni and M. Janoschek and M. Garst},
 	title = {{Topological magnon band structure of emergent Landau levels in a skyrmion lattice}},
-	note = {submitted}
+	year = {2021},
+	note = {Submitted, in review}
 }
 
 
@@ -2085,7 +2086,7 @@
 	author = "Tobias Weber",
 	title = {{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$}},
 	type = "Dissertation",
-	school = {Technische Universität M\"unchen, Physikdepartment E21},
+	school = {Technische Universit\"at M\"unchen, Physikdepartment E21},
 	address = {Munich, Germany},
 	year = 2017,
 	isbn = {978-3-843-93114-4},
