--- a/errata/errata.lyx
+++ b/errata/errata.lyx
@@ -136,7 +136,8 @@ literal "false"
 
 \end_inset
 
-, was only cited for section 2.1, but should also be cited for section 2.2.
+, was only cited for section 2.1, but should also be cited for section 2.2
+ of the thesis.
 \end_layout
 
 \begin_layout Itemize
