--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -258,7 +258,8 @@ with its basis vectors. This is just a formality, though, the mathematics are th
 With the metric tensor \cite[pp. 807-809]{Arens2015} of the crystal coordinate system, we can now calculate the scattering angles
 $2 \theta_M$, $2 \theta_S$, and $2 \theta_A$ from the monochromator, sample and analyser, respectively. 
 The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002},
-which we follow here. The explicit calculation of the TAS angles based on the $UB$ formalism is given in Ref. \cite{Lumsden2005}.
+which we follow here. 
+The explicit calculation of the TAS angles based on the $UB$ formalism was originally presented in Ref. \cite{Lumsden2005}.
 
 For the monochromator and analyser, the crystal angles $\theta_M$ and $\theta_A$ are coupled to 
 their scattering angles, they are simply half their value, because the Bragg condition of Eq. \ref{eq:bragg}
